--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,19 @@
-org.gradle.jvmargs  = -Xmx1G
+org.gradle.jvmargs  = -Xmx3G
 
-#Fabric properties
-minecraft_version   = 1.16.5
-yarn_mappings       = 1.16.5+build.3
-loader_version      = 0.11.1
+# Fabric Properties
+# https://fabricmc.net/versions.html
+minecraft_version   = 1.18.1
+yarn_build          = 7
+loader_version      = 0.12.12
 
-#Mod properties
-mod_version         = 1.16.5-1.0.0
-maven_group         = com.github.evoslab.surfandturfcuties
-archives_base_name  = surfandturfcuties
+# Mod Properties
+mod_version         = 1.0.0
+maven_group         = com.evoslab.cutelivingthings
+mod_id  = cutelivingthings
 
-#Dependencies
-fabric_api_version  = 0.30.0+1.16
+# Dependencies
+fabric_version      = 0.44.0+1.18
+
+mod_menu_version    = 3.0.0
+jedt_version        = 0.3.2
+gecko_version       = 1.18:3.0.23
