--- a/build.gradle
+++ b/build.gradle
@@ -1,79 +1,118 @@
 plugins {
-	id 'fabric-loom' version '0.6-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
+archivesBaseName = project.mod_id
 group = project.maven_group
+version = System.env.GITHUB_ACTIONS == "true"
+		? "${project.mod_version}+build.${System.env.GITHUB_RUN_NUMBER}"
+		: project.mod_version
 
-minecraft {
+repositories {
+	maven {
+		name = "Jitpack"
+		url  = "https://jitpack.io/"
+	}
+
+	maven {
+		name = "Shadew's Maven"
+		url  = "https://maven.shadew.net/"
+	}
+
+	maven {
+		name = "Gegy's Maven"
+		url  = "https://maven.gegy.dev/"
+	}
+
+	maven {
+		name = "Terraformers Maven"
+		url  = "https://maven.terraformersmc.com/releases/"
+	}
+
+	maven {
+		name = "Quilt Maven"
+		url  = "https://maven.quiltmc.org/repository/release/"
+	}
+
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+	}
+
+	maven {
+		name = "Jared"
+		url = "https://maven.blamejared.com/"
+	}
+
+	maven {
+		name = "Shedaniel Maven"
+		url = "https://maven.shedaniel.me/"
+	}
+
+	maven {
+		name = "Geckolib Maven"
+		url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
+	}
+
+	maven { url = "https://maven.devos.community/releases/" }
+	maven { url = "https://maven.devos.community/snapshots/" }
 }
 
 dependencies {
-	//to change the versions see the gradle.properties file
+	// Required
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_build}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// Libraries
+	modImplementation ("com.terraformersmc:modmenu:${project.mod_menu_version}") { exclude group: "net.fabricmc.fabric-api" }
+	//modImplementation("net.shadew:jedt:${project.jedt_version}") { exclude group: "net.fabricmc.fabric-api" }
+	modImplementation "software.bernie.geckolib:geckolib-fabric-${project.gecko_version}"
+	modImplementation(include("me.alphamode:ForgeTags:1.3"))
+
+	// Compatibility
+
+	// Utilities
+	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.0.343"
 }
 
 processResources {
 	inputs.property "version", project.version
 
-	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
+	filesMatching("fabric.mod.json") {
 		expand "version": project.version
 	}
-
-	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
-	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+tasks.withType(JavaCompile).configureEach {
+	it.options.release = 17
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+java {
+	withSourcesJar()
 }
 
 jar {
-	from "LICENSE"
+	from("LICENSE") {
+		rename { "${it}_${project.archivesBaseName}"}
+	}
+	from("LICENSE_ASSETS") {
+		rename { "${it}_${project.archivesBaseName}"}
+	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(jar) {
-				builtBy remapJar
-			}
-			artifact("${project.buildDir.absolutePath}/libs/${archivesBaseName}-${project.version}.jar"){
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			from components.java
 		}
 	}
 
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
+	repositories {}
 }
